@@ -11,7 +11,7 @@
 	minecraft_version=1.19.2
 	quilt_mappings=21
 	parchment_mappings=2022.11.27
-	loader_version=0.14.17
+	loader_version=0.14.21
 
 # Mod Properties
     mod_id = configurabledatafixers
@@ -23,7 +23,8 @@
 # Dependencies
 	fabric_version=0.76.0+1.19.2
 	fabric_asm_version=v2.3
-	frozenlib_version=1.1.16-mc1.19.2
+	frozenlib_version=1.2.4-mc1.19.2
+    jankson_version=1.2.2
 
 # External Mods
 	betterend_version=2.1.3
